core: delete trailers when media is removed.
